DEMO TEMPLATES/schema/force-app/main/default/objects/Demo_Event__c/Demo_Event__c.object-meta.xml
<CustomObject>
    <label>Demo Event</label>
    <pluralLabel>Demo Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>