DEMO TEMPLATES/schema/force-app/main/default/objects/Demo_Event__c/fields/Organizer__c.field-meta.xml
<CustomField>
    <fullName>Organizer__c</fullName>
    <label>Organizer</label>
    <type>Text</type>
    <length>255</length>
</CustomField>